--- a/MyStock.Application/Assets/Lang/Translations.ru-RU.resx
+++ b/MyStock.Application/Assets/Lang/Translations.ru-RU.resx
@@ -289,4 +289,10 @@
   <data name="ReopenInvoice" xml:space="preserve">
     <value>Открыть</value>
   </data>
+  <data name="Purchase" xml:space="preserve">
+    <value>Покупка</value>
+  </data>
+  <data name="Purchases" xml:space="preserve">
+    <value>Покупки</value>
+  </data>
 </root>
