--- a/MyStock.Application/Assets/Lang/Translations.resx
+++ b/MyStock.Application/Assets/Lang/Translations.resx
@@ -298,4 +298,7 @@
   <data name="DocumentCompletedAndCannotBeDeleted" xml:space="preserve">
     <value>The document cannot be deleted because it is closed.</value>
   </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
+  </data>
 </root>
